try to get holidays by adding puppeteer-extra lib

--- a/.github/workflows/daily_update_date.yml
+++ b/.github/workflows/daily_update_date.yml
@@ -34,3 +34,10 @@ jobs:
         git add data.json
         git commit -m "Обновление праздников" || echo "Изменений нет"
         git push
+
+    - name: Загрузить скриншот (для отладки)
+      if: always() # Выполнять даже если были ошибки
+      uses: actions/upload-artifact@v4
+      with:
+        name: debug-screenshot
+        path: debug-screenshot.png
