--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#fce4ec",
-  "theme_color": "#ff4081",
+  "theme_color": "#fce4ec",
   "icons": [
     {
       "src": "icons/icon-192.png",
